# nessim

./: .gitignore  Cargo.toml
nessim/: Cargo.toml
nessim/benches/: bench_tests.rs
nessim/src/: lib.rs  recalc_swap_list.rs
nessim/src/preprocessor/: mod.rs
src/: components.rs  consts.rs  lib.rs  main.rs  preprocessing_tests.rs  processed_nodes_map.rs  tests.rs
src/preprocessor/: mod.rs  tests.rs
